Pretty big refactor of the templates